fix dark mode again force

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,8 +45,12 @@ a {
 }
 
 @media (prefers-color-scheme: dark) {
-  .MuiTypography-root {
-    color: var(--foreground);
+  .MuiTypography-body1 {
+    color: white !important;
+  }
+
+  .MuiTypography-body2 {
+    color: black !important;
   }
 }
 
